--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@
 # Site Settings
 title                    : "Shenwei Hu"
 description              : "2nd year master student in Data Science and Information Technology at Tsinghua University"
-repository               : "RayeRen/acad-homepage.github.io"
+repository               : "hushenwei2000/hushenwei2000.github.io"
 google_scholar_stats_use_cdn : false
 
 # google analytics
 google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
 
 # SEO Related
-google_site_verification :  # get google_site_verification from https://search.google.com/search-console/about
+google_site_verification :  "google-site-verification=i8dItZN0UEOgbXOXh_6UqgUH8-mqTknFch5qNQ9US9M"
 bing_site_verification   :  # get bing_site_verification from https://www.bing.com/webmasters/about
 baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.baidu.com/login/index?u=/site/index
 
