--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ repository               : "hushenwei2000/hushenwei2000.github.io"
 google_scholar_stats_use_cdn : false
 
 # google analytics
-google_analytics_id      :  # get google_analytics_id from https://analytics.google.com/analytics/
+google_analytics_id      :  "G-M9915WHFFR"
 
 # SEO Related
 google_site_verification :  "tj83JNsf5Nhch1SObRWTAIS1pnExWIBkWpOwv2LMM4Q"
