--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Shenwei Hu"
-  avatar           : "images/hsw1m.jpg"
+  avatar           : "images/photo1.jpg"
   bio              : ""
   location         : "Shenzhen, China"
   employer         :
