--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,11 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
-  - title: "News"
-    url: "/#-news"
+  # - title: "News"
+  #   url: "/#-news"
 
-  - title: "Publications"
-    url: "/#-publications"
-
-  - title: "Honors and Awards"
-    url: "/#-honors-and-awards"
+  # - title: "Publications"
+  #   url: "/#-publications"
 
   - title: "Educations"
     url: "/#-educations"
@@ -18,5 +15,11 @@ main:
   - title: "Invited Talks"
     url: "/#-invited-talks"
 
-  - title: "Internships"
-    url: "/#-internships"
+  - title: "Projects"
+    url: "/#-projects"
+
+  - title: "Honors and Awards"
+    url: "/#-honors-and-awards"
+
+  - title: "Work Experiences"
+    url: "/#-work-experiences"
